Added Description folder with video and pdf files: CellTypes app. Exam in Angular.mp4 CellTypes app. Exam in Angular.pdf

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+Description/CellTypes app. Exam in Angular.odt
+Description/CellTypes app. Exam in Angular.odp
+Description/CellTypes app. Exam in Angular.jpg
